# frb2026_front_end

./: .env  .env.example  .gitignore  README.md  ReviewAgentClean_API接口文档_v2.md  demo.html  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start-dev.cmd  start-docling-dev.cmd  start-docling-parser.cmd  start-parser.cmd  vite.config.js  前端接口文档.md
docling-parser-service/: .env.example  README.md  README.zh-CN.md  requirements.txt
paper-review-system/: .gitignore  README.md  pyproject.toml
paper-review-system/paper_review_system/: __init__.py  cli.py  models.py  web_api.py
paper-review-system/paper_review_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper-review-system/paper_review_system/api/: review_pipeline.py
paper-review-system/paper_review_system/logic/: claim_extractor.py  reasoning_depth.py
paper-review-system/paper_review_system/parser/: __init__.py  anchor_builder.py  markdown_renderer.py  noise_cleaner.py  pdf_parser.py  section_builder.py  table_reconstructor.py
paper-review-system/paper_review_system/report/: assembler.py  validator.py
paper-review-system/paper_review_system/retrieval/: __init__.py  planner.py  refinement_generator.py
paper-review-system/paper_review_system/rules/: engine.py  format_rules.py  violation_id.py
paper-review-system/tests/: test_markdown_renderer.py  test_report_validator.py
paper-review-system/tools/: validate_parsed_markdown.py
paper_review_system/: __init__.py  io_utils.py  models.py  (+1 more)
paper_review_system.egg-info/: SOURCES.txt
(+69 files in other folders)
