[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-review-system"
version = "0.1.0"
description = "PDF to Markdown and paper review report pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24.0,<2.0.0",
]

[project.scripts]
paper-review = "paper_review_system.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["paper_review_system*"]
