[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-review-system"
version = "0.1.0"
description = "PDF to Markdown and document IR parser service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
paper-review = "paper_review_system.cli:main"
paper-review-api = "paper_review_system.web_api:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["paper_review_system*"]
